--- a/Index.html
+++ b/Index.html
@@ -37,9 +37,9 @@
             Plastic waste in the ocean can break down into microplastics, which can be ingested by fish and other marine life, eventually entering the human food chain.
           </p>
           <div class="d-flex flex-column flex-lg-row align-items-md-stretch justify-content-md-center gap-3 mb-4">
-            <a href="#" class="btn btn-lg bd-btn-lg btn-bd-primary rounded-5 fw-semibold px-lg-5">
+            <button class="btn btn-lg bd-btn-lg btn-bd-primary rounded-5 fw-semibold px-lg-5" onclick="takeAction()">
               TAKE ACTION
-            </a>
+            </button>
           </div>
         </div>
       </div>
@@ -53,14 +53,13 @@
       <div class="row gx-md-5">
         <div class="col-lg-4">
           <h4 class="fw-semibold mb-3">ALIGN</h4>
-          <p>
-            66% of people (73% of Millennials) are willing to pay more for products and services from companies
-            committed to positive social and environmental impact.
-          </p>
+          <p id="paragraph-align">66% of people (73% of Millennials) are willing to pay more for products and services from companies committed to positive social and environmental impact.</p>
           <p class="mb-md-0">
             <a href="#">
               <button class="btn btn-primary btn-sect2 rounded-5 fw-semibold py-2 mb-3">LEARN MORE</button>
             </a>
+            <a id="btn-edit" class="fw-semibold py-2 mb-3" onclick="edit('paragraph-align', 'btn-edit', 'btn-done')">EDIT</a>
+            <a id="btn-done" class="fw-semibold py-2 mb-3" onclick="changeText('paragraph-align')">DONE</a>
           </p>
         </div>
         <div class="col-lg-4 position-relative">
@@ -174,25 +173,31 @@
         </div>
         <div class="row gx-md-5 align-items-center">
           <!-- Embed Map -->
-          <div class="col-lg-6 mb-5">
+          <div class="col-lg-6 mb-3">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3953.1738239980377!2d110.3774998!3d-7.7713847!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a59b2d4729729%3A0xac4d7b5fcf34f8e4!2sGadjah%20Mada%20University!5e0!3m2!1sen!2sid!4v1683219759481!5m2!1sen!2sid" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
           <!-- Form -->
           <div class="col-lg-6">
             <div class="form-floating mb-3">
-              <input type="text" class="form-control" id="floatingName" placeholder="Name">
+              <input type="text" class="form-control" id="name" placeholder="Name">
               <label for="floatingNmae">Name</label>
             </div>
             <div class="form-floating mb-3">
-              <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+              <input type="email" class="form-control" id="email" placeholder="name@example.com">
               <label for="floatingInput">Email</label>
             </div>
             <div class="form-floating mb-3">
-              <textarea class="form-control" placeholder="Write your message here..." id="floatingTextarea2" style="height: 150px"></textarea>
+              <textarea class="form-control" placeholder="Write your message here..." id="message" style="height: 150px"></textarea>
               <label for="floatingTextarea2">Write your message here...</label>
             </div>
-            <button type="submit" class="btn btn-primary ps-4 pe-4">SEND</button>
+            <button type="submit" class="btn btn-primary rounded-3 px-4" onclick="send()">SEND</button>
+            
           </div>
+        </div>
+        <!-- Form response -->
+        <div class="row gx-md-5 align-items-center">
+          <div class="col-lg-6"></div>
+          <div class="col-lg-6" id="form-response"></div>
         </div>
       </div>
     </section>
@@ -213,5 +218,6 @@
     </footer>
 
     <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="myScript.js"></script>
 </body>
 </html>
